2005608-21  Pascal Terjan <pterjan@linuxfr.org>

	* src/rbglib_utils.c: Added GLib.listenv and .host_name (2.8)

2005-07-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib.h: Increment version.
	* sample/type-register.rb: Fix a bug.

2005-07-27  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/pkg-config.rb: Added PKGConfig.name, .description,
	 .provides, .requires.

2005-07-26  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_iochannel.c, rbglib_maincontext.c: Works on Win32 again.

2005-07-24  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/pkg-config.rb: Added PKGConfig.list_all.

2005-07-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb, src/rbglib_maincontext.c, rbglib_iochannel.c: 
	Fix to work on ruby-1.6.8, GTK+-2.0.6. 
	* src/rbglib_iochannel.c, rbgobj_object.c: Fix a compiling warning. 

2005-07-15  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/iochannel.rb, timeout.rb: Modified header comments. 

2005-07-10  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/iochannel.rb: Added. 

2005-07-02  Masao Mutoh  <mutoh@highway.ne.jp>

	* tests/test-iochannel.*: Added tests for GLib::IOChannel. 

2005-06-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_iochannel.c: Rename GLib::IOChannel#fd => #fileno, #to_i. 
	Improved #seek.

2005-06-29  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_iochannel.c: Added GLib::IOChannel#each_char, #each, #each_line.

2005-06-28  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_iochannel.c: Rename GLib::IOChannel#read_chars => #read.
	Unify GLib::IOChannel#read_to_end => #read.

2005-06-26  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_iochannel.c: Rename GLib::IOChannel#read_unichar => #readchar.
	#read_line => #readline. Add #gets, #getc.

2005-06-16  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_strv.c: Fix double free error. 
	* src/rbglib_iochannel.c: Added GLib::IOChannel.
	* src/rbglib.c, rbgobject.h: ditto.

2005-03-24  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/spawn.rb: Add a comment. Bugs:1159417.