@@ -1,3 +1,8 @@
+2005-09-08  Kouhei Sutou  <kou@cozmixng.org>
+
+	* src/rbgobj_boxed.c (rbgobj_make_boxed): Return nil if boxed
+	object is NULL.
+
 2005608-21  Pascal Terjan <pterjan@linuxfr.org>
 
 	* src/rbglib_utils.c: Added GLib.listenv and .host_name (2.8)
